Fixing game screen size on mobile.

--- a/components/Game.module.css
+++ b/components/Game.module.css
@@ -2,7 +2,6 @@
   position: relative;
   width: 100%;
   height: 100%;
-  height: calc(var(--vh, 1vh) * 100);
   overflow: hidden;
 }
 
